Progress bars now move Added colours to progress bars Notification if any progress bar reaches zero